--- a/src/styles/shared/buttons.scss
+++ b/src/styles/shared/buttons.scss
@@ -21,7 +21,7 @@
   background: linear-gradient(
     to bottom,
     var(--default-backgroundPrimary),
-    var(--default--backgroundSecondary)
+    var(--default-backgroundSecondary)
   );
   // TODO generate border colors
   // update mixin to use vars
@@ -82,26 +82,25 @@
   color: var(--disabled-text);
 }
 
-@mixin button-filled($button-color, $focus-color, $outline-color: null) {
-  $border-color: darken($button-color, 10%);
-  $active-color: darken($button-color, 15%);
+@mixin button-filled($button-color, $focus-color) {
   background: linear-gradient(
     to bottom,
-    lighten($button-color, 2%),
-    darken($button-color, 2%)
+    var(--default-backgroundPrimary),
+    var(--default-backgroundSecondary)
   );
-  border-color: $border-color;
-  box-shadow: inset 0 1px 0 0 lighten($button-color, 3%), shadow(faint),
+  border-color: var(--default-border);
+  box-shadow: inset 0 1px 0 0 var(--default-shadow), shadow(faint),
     0 0 0 0 transparent;
-  color: color('white');
+  color: var(--default-text);
 
+  // TODO: below
   &:hover {
     background: linear-gradient(
       to bottom,
       $button-color,
       darken($button-color, 5%)
     );
-    border-color: $border-color;
+    border-color: darken($button-color, 10%);
     color: color('white');
     text-decoration: none;
   }
@@ -113,10 +112,14 @@
   }
 
   &:active {
-    background: linear-gradient(to bottom, $border-color, $border-color);
-    border-color: $active-color;
+    background: linear-gradient(
+      to bottom,
+      darken($button-color, 10%),
+      darken($button-color, 10%)
+    );
+    border-color: darken($button-color, 15%);
     box-shadow: inset 0 0 0 0 transparent, shadow(faint),
-      0 0 1px 0 $active-color;
+      0 0 1px 0 darken($button-color, 15%);
   }
 }
 
